z-index of bottom-right fixed.
git-svn-id: https://svn.micromata.de/svn/projectforge/webapp/trunk@13568 be79319d-3443-0410-9b0a-b0c1b946f33b

--- a/src/main/webapp/styles/projectforge-form.css
+++ b/src/main/webapp/styles/projectforge-form.css
@@ -167,5 +167,4 @@ div.control-group i.bottom-right {
 	position: absolute;
 	left: 120px;
 	bottom: 0px;
-	z-index: 9999999;
 }
